[package]
name = "r_diesel-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
